# geometric_terrain_classifier

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
centauro_costmap/: CMakeLists.txt  package.xml
centauro_costmap/msg/: CostMap.msg
centauro_locomotion_msgs/: CMakeLists.txt  package.xml
centauro_locomotion_msgs/action/: LegMovement.action
centauro_locomotion_msgs/msg/: DrivingMovement.msg  TerrainClassMap.msg
fused_terrain_classifier/: CMakeLists.txt  package.xml
fused_terrain_classifier/include/fused_terrain_classifier/: cloud_matrix_loador.h  geometric_feature_estimator.h
fused_terrain_classifier/launch/: kth_fused_terrain_classifier.launch  ubo_fused_terrain_classifier.launch
fused_terrain_classifier/src/: fused_terrain_classifier.cpp  image_segmentation.py
geometric_terrain_classifier/: CMakeLists.txt  package.xml
geometric_terrain_classifier/include/terrain_classifier/: cloud_matrix_loador.h
geometric_terrain_classifier/launch/: ubo_geometric_terrain_classifier.launch  verosim_geometric_terrain_classifier.launch
geometric_terrain_classifier/src/: geometric_terrain_classifier.cpp  terrain_feature_generator.cpp
launch/: geometric_terrain_classifier.launch  geometric_terrain_classifier.launch~  kth_geometric_terrain_classifier.launch  pluto_terrain_classification.launch  pluto_terrain_classification.launch~  pointshape_based_processor.launch~
msg/: HeightMap.msg
src/: cloud_matrix_loador.h  feature_fuser.h  geometric_terrain_classifier.cpp  local_scan_buffer.h  pluto_terrain_classification.cpp
src/geometric_classification/: cloud_matrix_loador (copy).h  cloud_matrix_loador.h  geometric_terrain_classifier.cpp
terrain_classifier/: CMakeLists.txt  README.md  package.xml
terrain_classifier/include/terrain_classifier/: cloud_matrix_loador.h
terrain_classifier/launch/: ubo_geometric_terrain_classifier.launch
terrain_classifier/src/: cloud_matrix_loador.h  geometric_terrain_classifier.cpp
